forgot to ACP sooner, 3 pokemon randomly selected, saving seen and caught to local storage,with button that resets pokeball stats

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,12 @@ h2 {
     font-weight: bold;
 }
 
+img .poke-img {
+    display: block;
+    height: 100px;
+    width: 100px;
+}
+
 .gutter-right {
     margin-right: 20px;
 }
